# llmsonar

./: .gitignore  01_explore_vectors.ipynb  02_perpendicular_sweep.ipynb  03_2d_grid_exploration.ipynb  05_qwen_2d_scan.ipynb  07_measured_vector_test.ipynb  08_complexity_vector_test.ipynb  CLAUDE.md  LICENSE  pyproject.toml
data/: 1d_steering_quantitative_results.csv  2d_grid_results.csv  complexity_vector_sweep.csv  measured_vector_sweep.csv  perpendicular_sweep_results.csv
vectors/: complexity_vectors.pt
