[project]
name = "llmsonar"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "textstat>=0.7.10",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
